@@ -44,6 +44,8 @@ documents those changes that are of interest to users and administrators.
  -- Add "Partitions" field to "scontrol show node" output.
  -- Remove sched/wiki and sched/wiki2 plugins and associated code.
  -- Remove SchedulerRootFilter option and slurm_get_root_filter() API call.
+ -- Add SchedulerParameters option of spec_cores_first to select specialized
+    cores from the lowest rather than highest number cores and sockets.
 
 * Changes in Slurm 17.02.0pre3
 ==============================
